# sdkman-ui

./: .gitignore  Cargo.toml  LICENSE  README.md
api/: Cargo.toml  sdkman-candidates.txt
api/src/: lib.rs  local.rs  model.rs  remote.rs  util.rs
ui/: Cargo.toml
ui/src/: candidates.rs  main.rs
