[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lazy_static = "1.4.0"
regex = "1.5.4"
reqwest = { version = "0.11.6", features = ["blocking"] }
thiserror = "1.0.30"
url = "2.2.2"
urlencoding = "2.1.0"
alphanumeric-sort = "1.4.3"
